Feat: get Certificate By Id
